# bogosortcoin

./: .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: deploy-pages.yml
crates/consensus/: Cargo.toml
crates/consensus/src/: bogopow.rs  chain_work.rs  header.rs  lib.rs
crates/miner/: Cargo.toml
crates/miner/src/: main.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
site/: index.html
web/: app.js  index.html  run.py  style.css
