[workspace]
resolver = "2"
members = [
    "crates/primitives",
    "crates/consensus",
    "crates/miner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sha3 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
