[package]
name = "bogosortcoin-miner"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bogosortcoin-miner"
path = "src/main.rs"

[dependencies]
bogosortcoin-primitives = { path = "../primitives" }
bogosortcoin-consensus = { path = "../consensus" }
clap = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
